[gd_scene load_steps=6 format=3 uid="uid://kr3ldqn2mjit"]

[ext_resource type="Texture2D" uid="uid://bcvuti2hlxuf3" path="res://sprites/gameover.png" id="1_5xau3"]
[ext_resource type="Script" uid="uid://lyk3ou3a6ixj" path="res://Scripts/ui.gd" id="1_ouf27"]
[ext_resource type="Texture2D" uid="uid://yrpg7rpuvdjx" path="res://sprites/panel_score.png" id="2_ouf27"]
[ext_resource type="FontFile" uid="uid://curkghhhrovqq" path="res://sprites/Haruto-Personal-Use.ttf" id="4_lkys2"]
[ext_resource type="Texture2D" uid="uid://d2y1yb2duuflf" path="res://sprites/output-onlinepngtools (7).png" id="5_lkys2"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_ouf27")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(288, 512)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 32

[node name="PointsContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="GameOver Box" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/GameOver Box"]
modulate = Color(1.2536478, 0.46199673, 0.4751907, 1)
layout_mode = 2
texture = ExtResource("1_5xau3")

[node name="Panel" type="Panel" parent="MarginContainer/GameOver Box"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/GameOver Box/Panel"]
modulate = Color(0, 0, 0, 0.796)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_right = -53.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ouf27")
stretch_mode = 4

[node name="RoundScoreContainer" type="HBoxContainer" parent="MarginContainer/GameOver Box/Panel"]
visible = false
layout_mode = 0
offset_left = 191.0
offset_top = 29.0
offset_right = 210.0
offset_bottom = 42.0
alignment = 1

[node name="BestScoreContainer" type="HBoxContainer" parent="MarginContainer/GameOver Box/Panel"]
modulate = Color(1.9367292, 0, 0, 1)
texture_filter = 1
layout_mode = 0
offset_left = 253.0
offset_top = -208.0
offset_right = 280.0
offset_bottom = -190.0
alignment = 1

[node name="Button" type="Button" parent="MarginContainer/GameOver Box/Panel"]
modulate = Color(1, 0.18, 0.18, 1)
layout_mode = 0
offset_left = 154.0
offset_top = 23.0
offset_right = 223.0
offset_bottom = 85.0
theme_override_colors/font_color = Color(2.0331757, 2.0331757, 2.0331757, 0.9411765)
theme_override_colors/font_focus_color = Color(0.9529906, 0.9403663, 0.996543, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("4_lkys2")
theme_override_font_sizes/font_size = 16
text = "RETURN TO
THE
DREAM
"

[node name="MedalTexture" type="TextureRect" parent="MarginContainer/GameOver Box/Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 64.0
offset_top = 31.0
offset_right = 115.0
offset_bottom = 78.0
texture = ExtResource("5_lkys2")

[connection signal="pressed" from="MarginContainer/GameOver Box/Panel/Button" to="." method="_on_button_pressed"]
